Fixes alignment between icons & labels in buttons

--- a/source/sass/component/_button.scss
+++ b/source/sass/component/_button.scss
@@ -293,17 +293,21 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
 
 .c-button__label {
     max-width: 100%;
+    display: flex;
+    gap: #{$base};
 }
 
 .c-button__label-icon {
     order: 2;
-    margin-left: $base;
     position: relative;
     z-index: $level-2;
     display: flex;
+    margin-right: calc(#{$base} * -1);
 
     &--reverse {
         order: 1;
+        margin-right: 0;
+        margin-left: calc(#{$base} * -1);
     }
 }
 
@@ -314,40 +318,19 @@ $c-button-border-width: var(--c-button-border-width, $border-width-button) !defa
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 100%;
+    padding-top: 2px;
 
     &--reverse {
         order: 2;
     }
 }
 
-// Icon override
-.c-button__filled.c-button, 
-.c-button__outlined.c-button {
-    &--sm .c-button__label-icon {
-        margin-right: calc(calc(#{$base} * -1) * 0.5);
-    }
+.c-button--sm {
+    margin-right: calc( #{$base} * -0.5);
 
-    &--sm .c-button__label-icon--reverse {
-        margin-left: calc(calc(#{$base} * -1) * 0.5);
+    .c-button__label-icon--reverse {
         margin-right: 0;
-    }
-
-    &--md .c-button__label-icon {
-        margin-right: calc(#{$base} * -1);
-    }
-
-    &--md .c-button__label-icon--reverse {
-        margin-left: calc(#{$base} * -1);
-        margin-right: 0;
-    }
-
-    &--lg .c-button__label-icon {
-        margin-right: calc(calc(#{$base} * -1) * 1.5);
-    }
-
-    &--lg .c-button__label-icon--reverse {
-        margin-left: calc(calc(#{$base} * -1) * 1.5);
-        margin-right: 0;
+        margin-left: calc( #{$base} * -0.5);
     }
 }
 
